--- a/QuizApplication/Views/Quizzes/Index.cshtml
+++ b/QuizApplication/Views/Quizzes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<QuizApplication.DTOs.QuizDto>
+﻿@model IEnumerable<QuizApplication.DTOs.QuizDtos.QuizSummaryDto>
 @{
     ViewData["Title"] = "Twoje Quizy";
 }
