--- a/QuizApplication/Views/Quizzes/Delete.cshtml
+++ b/QuizApplication/Views/Quizzes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizApplication.DTOs.QuizDto
+﻿@model QuizApplication.DTOs.QuizDtos.QuizDetailsDto
 @{
     ViewData["Title"] = "Delete";
 }
@@ -21,12 +21,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AccessCode)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
         </dd>
     </dl>
     
