--- a/QuizApplication/Views/Questions/Create.cshtml
+++ b/QuizApplication/Views/Questions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizApplication.Models.ViewModels.AddQuestionViewModel
+﻿@model QuizApplication.Models.ViewModels.CreateQuestionViewModel
 
 @{
     ViewData["Title"] = "Dodaj pytanie";
